--- a/BlogApp/Views/Blogs/Index.cshtml
+++ b/BlogApp/Views/Blogs/Index.cshtml
@@ -33,12 +33,12 @@
         <table id="blogsTable" class="table table-striped table-hover align-middle">
             <thead class="table-dark">
                 <tr>
-                    <th>Title</th>
-                    <th>Content</th>
-                    <th>Author</th>
-                    <th>Date</th>
-                    <th>Category</th>
-                    <th>Actions</th>
+                    <th style="width: 20%;">Title</th>
+                    <th style="width: 30%;">Content</th>
+                    <th style="width: 15%;">Author</th>
+                    <th style="width: 10%;">Date</th>
+                    <th style="width: 10%;">Category</th>
+                    <th style="width: 15%;">Actions</th>
                 </tr>
             </thead>
             <tbody id="blogsTableBody">
